--- a/templates/profile/my-profile.html
+++ b/templates/profile/my-profile.html
@@ -19,10 +19,12 @@
 
 <body>
 
+
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="../images/base/logo.png"></a>   
+            <a class="navbar-brand" href="#"><img src="../images/base/logo.png"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu"
                 aria-controls="sidebarMenu">
                 <span class="navbar-toggler-icon"></span>
@@ -116,7 +118,7 @@
                     <div class="profile-card shadow-sm p-3">
                         <div class="row align-items-center">
                             <div class="info d-flex flex-column flex-md-row gap-3">
-                                <div class="user-avatar w-25 w-sm-100 text-center text-md-start">
+                                <div class="user-avatar text-center text-md-start">
                                     <img src="../images/primary/default_avatar.png" class="img-fluid rounded-circle"
                                         alt="Avatar">
                                 </div>
@@ -125,7 +127,7 @@
                                         class="top d-flex flex-column flex-md-row justify-content-between gap-2 align-items-center">
                                         <h5 class="m-0">Rashidov21</h5>
                                         <span class="rating text-muted"><i class="fa-solid fa-arrow-up"></i> 120</span>
-                                        <a href="#" class="profile-settings text-decoration-none"><i
+                                        <a href="../profile/edit-profile.html" class="profile-settings text-decoration-none"><i
                                                 class="fa-solid fa-gear"></i> Profil sozlamalari</a>
                                     </div>
                                     <div class="bottom mt-2">
@@ -137,21 +139,32 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="col-12 col-md-6">
-                                <p><strong>Ism-Familiya:</strong> Abdurakhmon Rashidov</p>
-                                <p><strong>Username:</strong> Rashidov21</p>
-                                <p><strong>Email:</strong> rashidovabdurakhmon@gmail.com</p>
-                                <p><strong>Viloyat:</strong> Andijon</p>
+                            <div class="col-sm-12 col-md-6">
+                                <div>
+                                    <strong>Ism-Familiya:</strong>
+                                    <p>Abdurakhmon Rashidov</p>
+                                    <strong>Username:</strong>
+                                    <p>Rashidov21</p>
+                                    <strong>Email:</strong>
+                                    <p>rashdi21@gmail.com</p>
+                                    <strong>Viloyat:</strong>
+                                    <p>Andijon</p>
+                                </div>
                             </div>
-                            <div class="col-12 col-md-6">
-                                <p><strong>Soha, yo‘nalish:</strong> FullStack dasturchi</p>
-                                <p><strong>Texnologiyalar:</strong> Python, JavaScript, UI/UX dizayn, Project Management
-                                </p>
-                                <p><strong>Profil turi:</strong> Co, Founder. Superuser. Master</p>
+                            <div class="col-sm-12 col-md-6">
+                                <div class="">
+                                    <strong>Soha, yo‘nalish:</strong>
+                                    <p>FullStack dasturchi</p>
+                                    <strong>Texnologiyalar:</strong>
+                                    <p>Python, JavaScript, UI/UX dizayn, Project Management</p>
+                                    <strong>Profil turi:</strong>
+                                    <p>Co, Founder. Superuser. Master</p>
+                                </div>
                             </div>
                         </div>
                         <hr>
-                        <p><strong>Qisqacha ma’lumot:</strong> Loutpat id nec cursus. Luctus et condimentum adipiscing eu fusce. Rutrum a bibendum at mi varius at ipsum. </p>
+                        <p><strong>Qisqacha ma’lumot:</strong> Loutpat id nec cursus. Luctus et condimentum adipiscing
+                            eu fusce. Rutrum a bibendum at mi varius at ipsum. </p>
                         <p><strong>Foydalanuvchi ijtimoiy tarmoqlari:</strong></p>
                         <div class="social-icons d-flex flex-column w-100 flex-wrap gap-3">
                             <div class="d-flex flex-wrap gap-3">
@@ -187,28 +200,34 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-6 mb-3">
                                 <div class="d-flex align-items-center gap-2">
-                                    <img src="../images/primary/antony.png" alt="User" class="user-avatar">
+                                    <img src="../images/primary/antony.png" alt="User"
+                                        class="following-avatar img-fluid object-fit-contain">
                                     <div>
                                         <p class="mb-0">Palonchi Pismadonchi</p>
-                                        <a href="" class="text-decoration-none"><i class="fa-solid fa-user-minus"></i> obunani bekor qilish</a>
+                                        <a href="" class="text-decoration-none"><i class="fa-solid fa-user-minus"></i>
+                                            obunani bekor qilish</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 mb-3">
                                 <div class="d-flex align-items-center gap-2">
-                                    <img src="../images/primary/antony.png" alt="User" class="user-avatar">
+                                    <img src="../images/primary/antony.png" alt="User"
+                                        class="following-avatar img-fluid object-fit-contain">
                                     <div>
                                         <p class="mb-0">Palonchi Pismadonchi</p>
-                                        <a href="" class="text-decoration-none"><i class="fa-solid fa-user-minus"></i> obunani bekor qilish</a>
+                                        <a href="" class="text-decoration-none"><i class="fa-solid fa-user-minus"></i>
+                                            obunani bekor qilish</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 mb-3">
                                 <div class="d-flex align-items-center gap-2">
-                                    <img src="../images/primary/antony.png" alt="User" class="user-avatar">
+                                    <img src="../images/primary/antony.png" alt="User"
+                                        class="following-avatar img-fluid object-fit-contain">
                                     <div>
                                         <p class="mb-0">Palonchi Pismadonchi</p>
-                                        <a href="" class="text-decoration-none"><i class="fa-solid fa-user-minus"></i> obunani bekor qilish</a>
+                                        <a href="" class="text-decoration-none"><i class="fa-solid fa-user-minus"></i>
+                                            obunani bekor qilish</a>
                                     </div>
                                 </div>
                             </div>
@@ -240,55 +259,67 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-6 py-2">
                                 <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
+                                    <img src="../images/primary/articale.png" alt="User"
+                                        class="img-fluid object-fit-contain">
                                     <div>
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 py-2">
                                 <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
+                                    <img src="../images/primary/articale.png" alt="User"
+                                        class="img-fluid object-fit-contain">
                                     <div>
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 py-2">
                                 <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
+                                    <img src="../images/primary/articale.png" alt="User"
+                                        class="img-fluid object-fit-contain">
                                     <div>
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 py-2">
                                 <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
+                                    <img src="../images/primary/articale.png" alt="User"
+                                        class="img-fluid object-fit-contain">
                                     <div>
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 py-2">
                                 <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
+                                    <img src="../images/primary/articale.png" alt="User"
+                                        class="img-fluid object-fit-contain">
                                     <div>
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-6 py-2">
                                 <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
+                                    <img src="../images/primary/articale.png" alt="User"
+                                        class="img-fluid object-fit-contain">
                                     <div>
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
