--- a/templates/profile/users-profile.html
+++ b/templates/profile/users-profile.html
@@ -112,11 +112,12 @@
 
                 <!-- Profile -->
 
-                <div class="col-12 col-lg-6">
+
+                <div class="col-sm-12 col-lg-6">
                     <div class="profile-card shadow-sm p-3">
                         <div class="row align-items-center">
                             <div class="info d-flex flex-column flex-md-row gap-3">
-                                <div class="user-avatar w-25 w-sm-100 text-center text-md-start">
+                                <div class="user-avatar text-center text-md-start">
                                     <img src="../images/primary/default_avatar.png" class="img-fluid rounded-circle"
                                         alt="Avatar">
                                 </div>
@@ -125,8 +126,9 @@
                                         class="top d-flex flex-column flex-md-row justify-content-between gap-2 align-items-center">
                                         <h5 class="m-0">Rashidov21</h5>
                                         <span class="rating text-muted"><i class="fa-solid fa-arrow-up"></i> 120</span>
-                                        <a href="#" class="profile-settings text-decoration-none"><i
-                                                class="fa-solid fa-gear"></i> Profil sozlamalari</a>
+                                        <a href="#"
+                                            class="profile-settings btn btn-primary fs-6 text-decoration-none"><i
+                                                class="fa-solid fa-user-check"></i> Obuna bo’lingan</a>
                                     </div>
                                     <div class="bottom mt-2">
                                         <p class="text-muted m-0">@rashidov21</p>
@@ -151,7 +153,8 @@
                             </div>
                         </div>
                         <hr>
-                        <p><strong>Qisqacha ma’lumot:</strong> Loutpat id nec cursus. Luctus et condimentum adipiscing eu fusce. Rutrum a bibendum at mi varius at ipsum. </p>
+                        <p><strong>Qisqacha ma’lumot:</strong> Loutpat id nec cursus. Luctus et condimentum adipiscing
+                            eu fusce. Rutrum a bibendum at mi varius at ipsum. </p>
                         <p><strong>Foydalanuvchi ijtimoiy tarmoqlari:</strong></p>
                         <div class="social-icons d-flex flex-column w-100 flex-wrap gap-3">
                             <div class="d-flex flex-wrap gap-3">
@@ -183,57 +186,79 @@
 
                 <!-- saved articles -->
 
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-12 col-lg-6">
                     <div class="saved-articals py-3 my-3">
                         <h3 class="saved-title">Foydalanuvchi maqolalari</h3>
                         <div class="row">
                             <div class="col-sm-12 col-md-12 py-2">
-                                <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
-                                    <div>
+                                <div class="d-flex flex-row flex-wrap gap-2">
+                                    <div class="articale-img d-flex justify-content-center">
+                                        <img src="../images/primary/articale.png" alt="User"
+                                            class="img-fluid object-fit-contain">
+                                    </div>
+                                    <div class="articale-div">
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 py-2">
-                                <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
-                                    <div>
+                                <div class="d-flex flex-row flex-wrap gap-2">
+                                    <div class="articale-img d-flex justify-content-center">
+                                        <img src="../images/primary/articale.png" alt="User"
+                                            class="img-fluid object-fit-contain">
+                                    </div>
+                                    <div class="articale-div">
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                    </div>
+                                </div>
+                            </div>    
+                            <div class="col-sm-12 col-md-12 py-2">
+                                <div class="d-flex flex-row flex-wrap gap-2">
+                                    <div class="articale-img d-flex justify-content-center">
+                                        <img src="../images/primary/articale.png" alt="User"
+                                            class="img-fluid object-fit-contain">
+                                    </div>
+                                    <div class="articale-div">
+                                        <h3 class="articale-title">Python: map() funktsiyasi</h3>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-12 py-1">
-                                <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
-                                    <div>
+                            <div class="col-sm-12 col-md-12 py-2">
+                                <div class="d-flex flex-row flex-wrap gap-2">
+                                    <div class="articale-img d-flex justify-content-center">
+                                        <img src="../images/primary/articale.png" alt="User"
+                                            class="img-fluid object-fit-contain">
+                                    </div>
+                                    <div class="articale-div">
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-12 col-md-12 py-1">
-                                <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
-                                    <div>
+                            <div class="col-sm-12 col-md-12 py-2">
+                                <div class="d-flex flex-row flex-wrap gap-2">
+                                    <div class="articale-img d-flex justify-content-center">
+                                        <img src="../images/primary/articale.png" alt="User"
+                                            class="img-fluid object-fit-contain">
+                                    </div>
+                                    <div class="articale-div">
                                         <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
+                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan
+                                            takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-12 col-md-12 py-1">
-                                <div class="d-flex gap-2">
-                                    <img src="../images/primary/articale.png" alt="User" class="img-fluid object-fit-contain">
-                                    <div>
-                                        <h3 class="articale-title">Python: map() funktsiyasi</h3>
-                                        <p class="articale-desp">Python'dagi map() funksiyasi ko'rsatilgan takrorlanadigan va qaytarilgan xarita ob'ektining barchai …</p>
-                                    </div>
-                                </div>
-                            </div>
+                            </div>   
+
                         </div>
-                        <center><a href="#" class="btn my-btn-success"> <i class="fa-solid fa-eye"></i> Barchasini ko’rish</a></center>
+                        <center><a href="#" class="btn my-btn-success"> <i class="fa-solid fa-eye"></i> Barchasini
+                                ko’rish</a></center>
                     </div>
                 </div>
 
